[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui/fonts/montserrat_eb_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/choose-map/map_item/map_item.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/fonts/montserrat_eb_48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/ui/icon/locked.png" type="Texture" id=5]

[node name="map_item" type="VBoxContainer"]
margin_right = 300.0
margin_bottom = 891.0
mouse_filter = 2
size_flags_vertical = 3
alignment = 1
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 300.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
mouse_filter = 2

[node name="Control" type="MarginContainer" parent="."]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 604.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2

[node name="map_icon" type="TextureRect" parent="Control"]
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
mouse_filter = 2
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 300.0
margin_bottom = 400.0
mouse_filter = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
margin_top = 240.0
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 160 )
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control/VBoxContainer/MarginContainer"]
margin_right = 300.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
color = Color( 0.254902, 0.254902, 0.254902, 0.796078 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/MarginContainer"]
margin_right = 300.0
margin_bottom = 160.0
grow_vertical = 0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="map_name" type="Label" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 300.0
margin_bottom = 74.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Mount"
align = 1
valign = 1

[node name="map_info" type="Label" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 46.0
margin_right = 300.0
margin_bottom = 74.0
custom_colors/font_color = Color( 0.580392, 0.580392, 0.580392, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Mount"
align = 1
valign = 1

[node name="locked" type="ColorRect" parent="Control"]
visible = false
margin_right = 300.0
margin_bottom = 400.0
mouse_filter = 2
color = Color( 0.341176, 0.341176, 0.341176, 0.905882 )

[node name="TextureRect" type="TextureRect" parent="Control/locked"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="MarginContainer3" type="MarginContainer" parent="."]
margin_top = 608.0
margin_right = 300.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 8 )
mouse_filter = 2

[node name="mount" type="Button" parent="."]
margin_top = 620.0
margin_right = 300.0
margin_bottom = 740.0
rect_min_size = Vector2( 250, 120 )
flat = true

[node name="ColorRect" type="ColorRect" parent="mount"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.517647, 0.164706, 1 )

[node name="Label" type="Label" parent="mount"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Select"
align = 1
valign = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_top = 744.0
margin_right = 300.0
margin_bottom = 994.0
rect_min_size = Vector2( 0, 250 )
mouse_filter = 2
size_flags_vertical = 3

[connection signal="pressed" from="mount" to="." method="_on_mount_pressed"]
